--- a/index.html
+++ b/index.html
@@ -22,8 +22,13 @@
         <a href="#seccion1">Reloj Digital y Alarma Sonora</a>
         <a href="#seccion2">Eventos del teclado</a>
         <a href="#seccion3">Seccion 3</a>
-        <a href="#seccion4">Seccion 4</a>
-        <a href="#seccion5">Seccion 5</a>
+        <a href="#seccion4">Responsive con Javascript</a>
+        <a href="#seccion5">Responsive tester</a>
+        <a href="#seccion6">Seccion 6</a>
+        <a href="#seccion7">Seccion 7</a>
+        <a href="#seccion8">Seccion 8</a>
+        <a href="#seccion9">Seccion 9</a>
+        <a href="#seccion10">Seccion 10</a>
       </nav>
     </aside>
     <main>
@@ -50,10 +55,37 @@
             <div id="countdown"></div>
         </section>
         <section id="seccion4" class="section">
-            <h2>Seccion 4</h2>
+            <h2>Responsive con Javascript</h2>
+            <div id="youtube">
+            </div>
+            <div id="gmapa"> 
+            </div>
         </section>
         <section id="seccion5" class="section">
-            <h2>Seccion 5</h2>
+            <h2>Renponsive Tester</h2>
+            <form id="responsive-tester">
+              <input name=direccion type="URL" placeholder="URL" required><br>
+              <input name=ancho type="text" placeholder="Ancho" required><br>
+              <input name=alto type="text" placeholder="Alto" required><br>
+              <button type="submit" name="probar">Probar</button>
+              <button type="button" name="cerrar">Cerrar</button>
+            </form>
+      
+        </section>
+        <section id="seccion6" class="section">
+            <h2>Seccion 6</h2>
+        </section>
+        <section id="seccion7" class="section">
+            <h2>Seccion 7</h2>
+        </section>
+        <section id="seccion8" class="section">
+            <h2>Seccion 8</h2>
+        </section>
+        <section id="seccion9" class="section">
+            <h2>Seccion 9</h2>
+        </section>
+        <section id="seccion10" class="section">
+            <h2>Seccion 10</h2>
         </section>
     </main>
     <button class="scroll-top-btn hidden">&#11014;</button>
