--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
       
         </section>
         <section id="seccion6" class="section">
-            <h2>Seccion 6</h2>
+          <h2>Detetccion de dispositivos <br> User agent</h2>
+          <div id="user-device"></div>
         </section>
         <section id="seccion7" class="section">
             <h2>Seccion 7</h2>
