--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <a href="#seccion3">Seccion 3</a>
         <a href="#seccion4">Responsive con Javascript</a>
         <a href="#seccion5">Responsive tester</a>
-        <a href="#seccion6">Seccion 6</a>
-        <a href="#seccion7">Seccion 7</a>
-        <a href="#seccion8">Seccion 8</a>
+        <a href="#seccion6">Detetccion de dispositivos</a>
+        <a href="#seccion7">Deteccion de conexion</a>
+        <a href="#seccion8">Deteccion de camara web</a>
         <a href="#seccion9">Seccion 9</a>
         <a href="#seccion10">Seccion 10</a>
       </nav>
@@ -77,10 +77,11 @@
           <div id="user-device"></div>
         </section>
         <section id="seccion7" class="section">
-            <h2>Seccion 7</h2>
+            <h2>Deteccion de conexion</h2>
         </section>
         <section id="seccion8" class="section">
-            <h2>Seccion 8</h2>
+            <h2>Deteccion de camara web</h2>
+            <video id="webcam"></video>
         </section>
         <section id="seccion9" class="section">
             <h2>Seccion 9</h2>
