--- a/index.html
+++ b/index.html
@@ -84,7 +84,10 @@
             <video id="webcam"></video>
         </section>
         <section id="seccion9" class="section">
-            <h2>Seccion 9</h2>
+            <h2>Geolocalizacion</h2>
+            <div id="geo">
+              
+            </div>
         </section>
         <section id="seccion10" class="section">
             <h2>Seccion 10</h2>
