--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@
         <a href="#seccion6">Detetccion de dispositivos</a>
         <a href="#seccion7">Deteccion de conexion</a>
         <a href="#seccion8">Deteccion de camara web</a>
-        <a href="#seccion9">Seccion 9</a>
-        <a href="#seccion10">Seccion 10</a>
+        <a href="#seccion9">Geolocalizacion</a>
+        <a href="#seccion10">Filtrar</a>
+        <a href="#seccion11">Sorteo</a>
+        <a href="#seccion12">Seccion 12</a>
+        <a href="#seccion13">Seccion 13</a>
+        <a href="#seccion14">Seccion 14</a>
+        <a href="#seccion15">Seccion 15</a>
       </nav>
     </aside>
     <main>
@@ -90,7 +95,63 @@
             </div>
         </section>
         <section id="seccion10" class="section">
-            <h2>Seccion 10</h2>
+            <h2>Filtro de busqueda</h2>
+            <input type="search" placeholder="Buscar..." class="card-filter">
+            <article class="cards">
+              <figure class="card">
+                <img src="https://placeimg.com/200/200/nature" alt="Nature"/>
+                <figcaption class="figcaption">Nature</figcaption>
+              </figure>
+              <figure class="card">
+                <img src="https://placeimg.com/200/200/any" alt="Any">
+                <figcaption class="figcaption">Any</figcaption>
+              </figure>
+              <figure class="card">
+                <img src="https://placeimg.com/200/200/tech" alt="Tech">
+                <figcaption class="figcaption">Tech</figcaption>
+              </figure>
+              <figure class="card">
+                <img src="https://placeimg.com/200/200/animals" alt="Animals">
+                <figcaption class="figcaption">Animals</figcaption>
+              </figure>
+              <figure class="card">
+                <img src="https://placeimg.com/200/200/people" alt="People">
+                <figcaption class="figcaption">People</figcaption>
+              </figure>
+              <figure class="card">
+                <img src="https://placeimg.com/200/200/Architech" alt="Architech">
+                <figcaption class="figcaption">Architech</figcaption>
+              </figure>
+            </article>
+        </section>
+        <section id="seccion11" class="section">
+            <h2>Sorteo digital</h2>
+            <ul>
+              <li class="item">JavaSccrit</li>
+              <li class="item">PHP</li>
+              <li class="item">JAVA</li>
+              <li class="item">C</li>
+              <li class="item">Python</li>
+              <li class="item">Ruby</li>
+              <li class="item">Go</li>
+              <li class="item">Visual Basic</li>
+              <li class="item">Rust</li>
+              <li class="item">Pert</li>
+            </ul>
+            <button id="ganador" type="button">Obtener Ganador</button>
+        </section>
+        <section id="seccion12" class="section">
+          <h2>Seccion 12</h2>
+         
+        </section> 
+        <section id="seccion13" class="section">
+          <h2>Seccion 13</h2>
+        </section>
+        <section id="seccion14" class="section">
+          <h2>Seccion 14</h2>
+        </section>
+        <section id="seccion15" class="section">
+          <h2>Seccion 15</h2>
         </section>
     </main>
     <button class="scroll-top-btn hidden">&#11014;</button>
