--- a/index.html
+++ b/index.html
@@ -126,19 +126,19 @@
         </section>
         <section id="seccion11" class="section">
             <h2>Sorteo digital</h2>
-            <ul>
-              <li class="item">JavaSccrit</li>
-              <li class="item">PHP</li>
-              <li class="item">JAVA</li>
-              <li class="item">C</li>
-              <li class="item">Python</li>
-              <li class="item">Ruby</li>
-              <li class="item">Go</li>
-              <li class="item">Visual Basic</li>
-              <li class="item">Rust</li>
-              <li class="item">Pert</li>
+            <ul class="players">
+              <li class="player">JavaSccrit</li>
+              <li class="player">PHP</li>
+              <li class="player">JAVA</li>
+              <li class="player">C</li>
+              <li class="player">Python</li>
+              <li class="player">Ruby</li>
+              <li class="player">Go</li>
+              <li class="player">Visual Basic</li>
+              <li class="player">Rust</li>
+              <li class="player">Pert</li>
             </ul>
-            <button id="ganador" type="button">Obtener Ganador</button>
+            <button id="winner-btn" type="button">Obtener Ganador</button>
         </section>
         <section id="seccion12" class="section">
           <h2>Seccion 12</h2>
