--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a href="#seccion9">Geolocalizacion</a>
         <a href="#seccion10">Filtrar</a>
         <a href="#seccion11">Sorteo</a>
-        <a href="#seccion12">Seccion 12</a>
+        <a href="#seccion12">Responsive slider</a>
         <a href="#seccion13">Seccion 13</a>
         <a href="#seccion14">Seccion 14</a>
         <a href="#seccion15">Seccion 15</a>
@@ -141,8 +141,34 @@
             <button id="winner-btn" type="button">Obtener Ganador</button>
         </section>
         <section id="seccion12" class="section">
-          <h2>Seccion 12</h2>
-         
+          <h2>Responsive slider</h2>
+          <div class="slider">
+            <div class="slider-slides">
+              <div class="slider-slide active">
+                <img src="https://placeimg.com/400/400/animals" alt="animals">
+              </div>
+              <div class="slider-slide">
+                <h4>Diapositiva 2</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. At perspiciatis deleniti quisquam dolorem quod. Facere maiores numquam modi neque aliquid distinctio eaque, et, quaerat amet ipsam earum sed cumque quidem.
+                </p>
+              </div>
+              <div class="slider-slide">
+                <img src="https://placeimg.com/400/400/nature" alt="Nature">
+              </div>
+              <div class="slider-slide">
+                <h4>Diapositiva 4</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat neque corrupti exercitationem beatae tempora veniam inventore impedit accusamus reprehenderit eligendi praesentium dolores, nesciunt atque modi voluptate deserunt consequatur expedita eveniet.
+                </p>
+              </div>
+              <div class="slider-btns">
+                <a class="prev" href="#">&laquo;</a>
+                <a class="next" href="#">&raquo;</a>
+              </div>
+            </div>
+
+          </div>
         </section> 
         <section id="seccion13" class="section">
           <h2>Seccion 13</h2>
