--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
     </button>
     <aside class="panel">
       <nav class="menu">
-        <a href="#seccion1">Reloj Digital y Alarma Sonora</a>
-        <a href="#seccion2">Eventos del teclado</a>
-        <a href="#seccion3">Seccion 3</a>
-        <a href="#seccion4">Responsive con Javascript</a>
-        <a href="#seccion5">Responsive tester</a>
-        <a href="#seccion6">Detetccion de dispositivos</a>
-        <a href="#seccion7">Deteccion de conexion</a>
-        <a href="#seccion8">Deteccion de camara web</a>
-        <a href="#seccion9">Geolocalizacion</a>
-        <a href="#seccion10">Filtrar</a>
-        <a href="#seccion11">Sorteo</a>
-        <a href="#seccion12">Responsive slider</a>
-        <a href="#seccion13">Seccion 13</a>
-        <a href="#seccion14">Seccion 14</a>
-        <a href="#seccion15">Seccion 15</a>
+        <a href="#seccion1"data-scroll-spy>Reloj Digital y Alarma Sonora</a>
+        <a href="#seccion2"data-scroll-spy>Eventos del teclado</a>
+        <a href="#seccion3"data-scroll-spy>Cuenta regresiva</a>
+        <a href="#seccion4"data-scroll-spy>Responsive con Javascript</a>
+        <a href="#seccion5"data-scroll-spy>Responsive tester</a>
+        <a href="#seccion6"data-scroll-spy>Detetccion de dispositivos</a>
+        <a href="#seccion7"data-scroll-spy>Deteccion de conexion</a>
+        <a href="#seccion8"data-scroll-spy>Deteccion de camara web</a>
+        <a href="#seccion9"data-scroll-spy>Geolocalizacion</a>
+        <a href="#seccion10"data-scroll-spy>Filtrar</a>
+        <a href="#seccion11"data-scroll-spy>Sorteo</a>
+        <a href="#seccion12"data-scroll-spy>Responsive slider</a>
+        <a href="#seccion13"data-scroll-spy>video Inteligente</a>
+        <a href="#seccion14"data-scroll-spy>Seccion 14</a>
+        <a href="#seccion15"data-scroll-spy>Seccion 15</a>
       </nav>
     </aside>
     <main>
-        <section id="seccion1" class="section">
+        <section id="seccion1" class="section" data-scroll-spy>
             <h2>Reloj Digital y Alarma Sonora</h2>
             <div id="reloj">
 
@@ -49,24 +49,24 @@
               <button id="desactivar-alarma">Derener Alarma</button>
             </div>
         </section>
-        <section id="seccion2" class="section">
+        <section id="seccion2" class="section" data-scroll-spy>
             <h2>Eventos del teclado</h2>
             <article class="stage">
               <div class="ball"></div>
             </article>
         </section>
-        <section id="seccion3" class="section">
+        <section id="seccion3" class="section" data-scroll-spy>
             <h2>Cuneta regresiva</h2>
             <div id="countdown"></div>
         </section>
-        <section id="seccion4" class="section">
+        <section id="seccion4" class="section" data-scroll-spy>
             <h2>Responsive con Javascript</h2>
             <div id="youtube">
             </div>
             <div id="gmapa"> 
             </div>
         </section>
-        <section id="seccion5" class="section">
+        <section id="seccion5" class="section" data-scroll-spy>
             <h2>Renponsive Tester</h2>
             <form id="responsive-tester">
               <input name=direccion type="URL" placeholder="URL" required><br>
@@ -77,24 +77,24 @@
             </form>
       
         </section>
-        <section id="seccion6" class="section">
+        <section id="seccion6" class="section" data-scroll-spy>
           <h2>Detetccion de dispositivos <br> User agent</h2>
           <div id="user-device"></div>
         </section>
-        <section id="seccion7" class="section">
+        <section id="seccion7" class="section" data-scroll-spy>
             <h2>Deteccion de conexion</h2>
         </section>
-        <section id="seccion8" class="section">
+        <section id="seccion8" class="section" data-scroll-spy>
             <h2>Deteccion de camara web</h2>
             <video id="webcam"></video>
         </section>
-        <section id="seccion9" class="section">
+        <section id="seccion9" class="section" data-scroll-spy>
             <h2>Geolocalizacion</h2>
             <div id="geo">
               
             </div>
         </section>
-        <section id="seccion10" class="section">
+        <section id="seccion10" class="section" data-scroll-spy>
             <h2>Filtro de busqueda</h2>
             <input type="search" placeholder="Buscar..." class="card-filter">
             <article class="cards">
@@ -124,7 +124,7 @@
               </figure>
             </article>
         </section>
-        <section id="seccion11" class="section">
+        <section id="seccion11" class="section" data-scroll-spy>
             <h2>Sorteo digital</h2>
             <ul class="players">
               <li class="player">JavaSccrit</li>
@@ -140,7 +140,7 @@
             </ul>
             <button id="winner-btn" type="button">Obtener Ganador</button>
         </section>
-        <section id="seccion12" class="section">
+        <section id="seccion12" class="section" data-scroll-spy>
           <h2>Responsive slider</h2>
           <div class="slider">
             <div class="slider-slides">
@@ -170,13 +170,16 @@
 
           </div>
         </section> 
-        <section id="seccion13" class="section">
-          <h2>Seccion 13</h2>
+        <section id="seccion13" class="section" data-scroll-spy>
+          <h2>Video Inteligente</h2>
+          <video src="assets/videoTest.mp4" muted controls loop data-smart-video></video>
+          <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+          <video src="assets/videoTest.mp4" muted controls loop data-smart-video></video>
         </section>
-        <section id="seccion14" class="section">
+        <section id="seccion14" class="section" data-scroll-spy>
           <h2>Seccion 14</h2>
         </section>
-        <section id="seccion15" class="section">
+        <section id="seccion15" class="section" data-scroll-spy>
           <h2>Seccion 15</h2>
         </section>
     </main>
